# i2e_user_reconstruction

./: .gitignore  .gitmodules  README.md  addons.make  i2e_user_reconstruction.sln  i2e_user_reconstruction.vcxproj  i2e_user_reconstruction.vcxproj.filters
doc/: Recon.vsdx
doc/Projekt1/: .gitignore  Makefile  Master-AW2.bib  Projekt1.sublime-project  main.tex
doc/Projekt1/sections/: conclusion.tex  introduction.tex  networkMiddleware.tex  reconstruction.tex  requirements.tex
doc/Projekt2/: .gitignore  Makefile  abstract.tex  changepage.sty  fancyhdr.sty  literature.bib  lni.bst  lni.cls  lnig.bst  paper.tex
doc/Projekt2/figs/: gilogo.eps
doc/Projekt2/sections/: birgit.tex  hci.tex  iwer.tex  malte.tex  raimund.tex  standderforschung.tex  zusammenfassung.tex
doc/VPP/: i2E-User-Reconstruction.vpp
libdynrecon/: ReadMe.txt  libdynrecon.vcxproj  libdynrecon.vcxproj.filters
libdynrecon/src/: AbstractMeshProcessor.cpp  AbstractMeshProcessor.h  AbstractPointCloudGenerator.cpp  AbstractPointCloudGenerator.h  AbstractPointProcessor.cpp  AbstractPointProcessor.h  AbstractProcessingPipeline.cpp  AbstractProcessingPipeline.h  Controls.cpp  Controls.h  DepthFilePointCloudGenerator.cpp  DepthFilePointCloudGenerator.h  DepthThreshold.cpp  DepthThreshold.h  GreedyProjectionMeshProcessor.cpp  GreedyProjectionMeshProcessor.h  OrganizedFastMeshProcessor.cpp  OrganizedFastMeshProcessor.h  PclOpenNI2Grabber.cpp  PclOpenNI2Grabber.h  Pipeline01.cpp  Pipeline01.h  Pipeline02.cpp  Pipeline02.h  PointCloudSampler.cpp  PointCloudSampler.h  PointCloudSmoother.cpp  PointCloudSmoother.h  StaticBackgroundRemover.cpp  StaticBackgroundRemover.h  typedefs.h
src/: AbstractMeshProcessor.cpp  AbstractPointCloudGenerator.cpp  AbstractPointCloudGenerator.h  AbstractPointProcessor.cpp  AbstractPointProcessor.h  AbstractProcessingPipeline.cpp  AbstractProcessingPipeline.h  CMakeLists.txt  Controls.cpp  Controls.h  DepthThreshold.cpp  DepthThreshold.h  OrganizedFastMeshProcessor.h  PclOpenNI2Grabber.cpp  Pipeline01.cpp  Pipeline01.h  SensorCalibrationSettings.cpp  SensorCalibrationSettings.h  ofApp.cpp  ofApp.h
src/app/: CMakeLists.txt
src/app/src/: Controls.cpp  Controls.h  ControlsOfxGui.cpp  ControlsOfxGui.h  SensorCalibrationSettings.cpp  SensorCalibrationSettings.h  appinfo.h  appinfo.h.in.cmake  main.cpp  ofApp.cpp  ofApp.h
src/autocalibrator/: CMakeLists.txt
src/autocalibrator/src/: ofApp.cpp  ofApp.h
src/calibrator/: CMakeLists.txt
src/calibrator/src/: ofApp.cpp  ofApp.h
src/common/: CMakeLists.txt
src/common/include/common/: ModelWriter.h  OfMeshAndPixels.h  PclCloudAndImage.h  PclCloudAndOfImage.h  PointCloudPlayer.h  common.h
src/common/src/: ModelWriter.cpp  PointCloudPlayer.cpp  SensorCalibrationSettings.cpp  common.cpp
src/fast-reconstruction/: CMakeLists.txt
src/fast-reconstruction/src/: ofApp.cpp  ofApp.h
src/imageloader/: CMakeLists.txt
src/imageloader/src/: ofApp.cpp  ofApp.h
src/meshseq-player/: CMakeLists.txt
src/meshseq-player/src/: PlaySettings.cpp  PlaySettings.h  ofApp.cpp  ofApp.h
src/netkinect/: CMakeLists.txt
src/netkinect-calib/: CMakeLists.txt
src/netkinect-calib/src/: NetKinectSensor.cpp  ofApp.cpp  ofApp.h
src/netkinect-demo/: CMakeLists.txt
src/netkinect-demo/src/: NetKinectPointCloudGenerator.cpp  NetKinectPointCloudGenerator.h  NetKinectSensor.h  ofApp.cpp  ofApp.h
src/netkinect-reconstruction/: CMakeLists.txt
src/netkinect-reconstruction/src/: ofApp.cpp  ofApp.h
src/netkinect/include/: Client.h  Common.h  Connection.h  KinectWrapper.h  Logger.h  PCLUtil.h  Server.h  ServerAPI.h  Sync.h  TCPConnection.h  TimingClient.h  UDPConnection.h
src/netkinect/src/: Client.cpp  KinectWrapper.cpp  MainClient.cpp  MainServer.cpp  Server.cpp  ServerAPI.cpp  Sync.cpp  TCPConnection.cpp  TestKinect.cpp  TestPic.cpp  TestPic_new.cpp  TestServer.cpp  TestTimer.cpp  TimingClient.cpp  UDPConnection.cpp
src/of-pcl-bridge/: CMakeLists.txt
src/of-pcl-bridge/include/of-pcl-bridge/: of-pcl-bridge.h
src/of-pcl-bridge/src/: of-pcl-bridge.cpp
src/player/: CMakeLists.txt
src/player/src/: PointCloudPlayer.cpp  PointCloudPlayer.h  ofApp.cpp  ofApp.h
src/recorder/: CMakeLists.txt
src/recorder/src/: PointCloudWriter.cpp  PointCloudWriter.h  ofApp.cpp  ofApp.h
src/sensorsync/: CMakeLists.txt
src/sensorsync/src/: ofApp.cpp  ofApp.h
src/slow-reconstruction/: CMakeLists.txt
src/slow-reconstruction/src/: ofApp.cpp  ofApp.h
src/texturemapping/: CMakeLists.txt
src/texturemapping/src/: ofApp.cpp  ofApp.h
